# my-copilot

./: .gitignore  DECISIONS.md  LICENSE  PROJECT.md  package-lock.json  package.json
.github/workflows/: release.yml
specs/: SPEC-001-architecture-stack.md  SPEC-002-portable-bundle.md  SPEC-003-byok-configuration.md  SPEC-004-backend-csharp-copilot-sdk.md  SPEC-004-bridge-tauri-rust.md  SPEC-005-frontend-copilotkit-react.md  SPEC-006-config-dialog.md
src/: App.css  App.tsx  ChatWindow.css  ChatWindow.tsx  ConfigDialog.css  ConfigDialog.tsx  index.css  index.html  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: chat.rs  config.rs  history.rs  mod.rs  process.rs
src-tauri/src/config/: io.rs  mod.rs  schema.rs
src-tauri/src/copilot/: bridge.rs  mod.rs  process.rs
src-tauri/src/persistence/: append.rs  mod.rs  read.rs  session.rs
tests/: manual-e2e.md
