[package]
name = "my-copilot"
version = "0.1.0"
description = "Portable Windows 11 desktop app for AI agent workflows (BYOK)"
authors = ["schirkan"]
edition = "2021"

[lib]
name = "my_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
# v1: kein Crypto-Dep (apiKey ist Klartext in config.json)
# v2-TODO: DPAPI via windows = "0.58" oder keyring (plattformübergreifend)

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true